# haskell-agent

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yml  haskell-agent.cabal
app/: MCPExample.hs  Main.hs  Tools.hs  Types.hs
docs/: MCP.md  PUBLISHING.md  USAGE.md
scratch/: typed_agent_bad_deps_order.hs  typed_agent_bad_run.hs  typed_agent_bad_tool.hs  typed_agent_ok.hs
src/: Agent.hs
src/Agent/: Anthropic.hs  MCP.hs  OpenAI.hs  Tools.hs  Types.hs
