cabal-version: 2.4
name:          haskell-agent
version:       0.1.0.0
synopsis:      A minimal AI agent framework inspired by pydantic-ai
build-type:    Simple

library
  exposed-modules:
    Agent
    Agent.Types
    Agent.Anthropic
    Agent.OpenAI
    Agent.Tools
    Agent.MCP
  build-depends:
    base >= 4.14 && < 5,
    aeson >= 2.2.3.0,
    text >= 1.2,
    bytestring >= 0.10,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    http-types >= 0.12,
    containers >= 0.6,
    mtl >= 2.2,
    transformers >= 0.5,
    time >= 1.9,
    process >= 1.6,
    async >= 2.2,
    vector >= 0.12,
    case-insensitive >= 1.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable agent-example
  main-is: Main.hs
  other-modules: Tools, Types
  build-depends:
    base >= 4.14 && < 5,
    haskell-agent,
    text,
    aeson >= 2.2.3.0,
    bytestring,
    transformers
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall

executable mcp-example
  main-is: MCPExample.hs
  build-depends:
    base >= 4.14 && < 5,
    haskell-agent,
    text,
    aeson >= 2.2.3.0,
    transformers
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall
